--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
   },
