--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "emailjs-com": "^2.6.4",
+    "express": "^4.18.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
