--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
@@ -27,6 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-api":"cd src/api && venv/Scripts/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,5 +51,8 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3"
-  }
+  },
+
+  "proxy": "http://localhost:5000"
+  
 }
