--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/x-data-grid": "^6.19.4",
@@ -21,6 +22,7 @@
     "emailjs-com": "^2.6.4",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
+    "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -32,7 +34,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd src/api && venv/Scripts/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
