--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^2.6.4",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
