--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.12.0",
     "sass": "^1.70.0",
     "smooth-scroll": "^16.1.3"
