--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/x-data-grid": "^6.19.4",
+    "@stripe/stripe-js": "^3.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -23,6 +24,7 @@
     "emailjs-com": "^2.6.4",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -30,7 +32,8 @@
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.0",
     "sass": "^1.70.0",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "stripe": "^14.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
