--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.0",
     "sass": "^1.70.0",
+    "selenium": "^2.20.0",
+    "selenium-webdriver": "^4.19.0",
     "smooth-scroll": "^16.1.3",
     "stripe": "^14.23.0"
   },
