--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,10 @@ node_modules/*
 Backend/node_modules/*
 
 .env
-package-lock.json
 yarn.lock
+
+package-lock.json
+
+*package-lock.json
+*package.json
+
