--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.12.4",
     "sass": "^1.70.0",
+    "selenium-webdriver": "^4.19.0",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.8"
   },
