--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.15.11",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/styles": "^5.15.15",
     "@mui/x-data-grid": "^6.19.4",
     "@stripe/stripe-js": "^3.1.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -30,13 +29,12 @@
     "emailjs-com": "^2.6.4",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-chatbot": "^0.5.0",
     "recharts": "^2.12.4",
     "sass": "^1.70.0",
@@ -45,15 +43,15 @@
     "styled-components": "^6.1.8"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start"
   },
-
   "engines": {
     "node": "14.x || 16.x || 18.x"
-  },  
-  
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
