Update Vercel deployment settings for consistency

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
     "rewrites": [
       { "source": "/(.*)", "destination": "/index.html" }
-    ]
+    ],
+    "build": {
+        "env": {
+          "CUSTOM_ENV_VARIABLE": "value"
+        },
+        "commands": {
+          "install": "npm install",
+          "build": "npm run build"
+        }
+      }
   }
   
+ 
