--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emailjs-com": "^2.6.4",
     "express": "^4.18.2",
     "framer-motion": "^11.0.6",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.3.1",
@@ -45,7 +46,7 @@
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "dev": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start"
   },
@@ -71,4 +72,5 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3"
   }
+  
 }
