--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "selenium-webdriver": "^4.19.0",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.8"
-  },  "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
+
+    },  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && cd backend && npm start",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start"
+    "dev": "react-scripts start"
   },
+  
   "engines": {
     "node": "14.x || 16.x || 18.x"
   },
@@ -64,5 +66,6 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3"
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
