--- a/package.json
+++ b/package.json
@@ -37,13 +37,11 @@
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.8"
 
-    },  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && cd backend && npm start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "react-scripts start"
-  },
+    }, "scripts": {
+      "start": "npm run start:backend && npm run start:frontend",
+      "start:backend": "node backend/server.js", 
+      "start:frontend": "react-scripts start"
+    },
   
   "engines": {
     "node": "14.x || 16.x || 18.x"
@@ -66,6 +64,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3"
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
