--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,33 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "backend/server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      {
-        "src": "/api/.*",
-        "dest": "/backend/server.js"
-      },
-      {
-        "src": "/post_register",
-        "dest": "/backend/server.js"
-      },
-      {
-        "src": "/post_login",
-        "dest": "/backend/server.js"
-      },
-      {
-        "src": "/logout",
-        "dest": "/backend/server.js"
-      },
-      {
-        "src": "/",
-        "dest": "/backend/server.js"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ],
+  "env": {
+    "DB_USER": "@db_user",
+    "DB_PASSWORD": "@db_password",
+    "DB_HOST": "@db_host",
+    "DB_PORT": "@db_port",
+    "DB_DATABASE": "@db_database",
+    "JWT_SECRET": "@jwt_secret",
+    "CORS_ORIGIN": "@cors_origin"
+  },
+  "regions": ["all"]
+}
