--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }, "scripts": {
       "vercel-build": "npm run build && cd backend && npm install && npm run build",
       "start": "npm run start:frontend && npm run start:backend",
+      "build": "react-scripts build",
       "start:backend": "node backend/server.js", 
       "start:frontend": "react-scripts start"
     },
