--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "NODE_ENV=production node server.js"
+    "prod": "NODE_ENV=production node server.js",
+    "build": "echo \"No build step required\""
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
