--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
 
     }, "scripts": {
       "vercel-build": "npm run build && cd backend && npm install && npm run build",
-      "start": "npm run start:frontend && npm run start:backend",
       "build": "react-scripts build",
-      "start:backend": "node backend/server.js", 
-      "start:frontend": "react-scripts start"
+      "start": "npm run start:frontend",
+      "start:frontend": "react-scripts start",
+      "start:backend": "node backend/server.js"
+      
     },
   
   "engines": {
