--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,38 @@
 {
   "version": 2,
+  "public": false,
   "builds": [
     {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": { "distDir": "build" }
     },
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "src": "public/index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "backend/server.js"
+      "src": "/(css|js|img|fonts|html)/(.*)",
+      "dest": "/public/$1/$2",
+      "headers": {
+        "cache-control": "max-age=31536000, immutable"
+      }
     },
     {
-      "src": "^/(.*)",
-      "dest": "/build/$1",
-      "continue": true
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/.*",
+      "dest": "/public/index.html"
     }
   ],
-  "env": {
-    "DB_USER": "default",
-    "DB_HOST": "ep-calm-dream-a4ukxego.us-east-1.aws.neon.tech",
-    "DB_DATABASE": "verceldb",
-    "DB_PASSWORD": "PIxAdb16hWis",
-    "DB_PORT": "5432",
-    "JWT_SECRET": "technogaze_secretKey",
-    "CORS_ORIGIN": "*"
-  }
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/public/index.html"
+    }
+  ]
 }
