--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     }, "scripts": {
       "vercel-build": "npm run build && cd backend && npm install && npm run build",
       "build": "react-scripts build",
-      "start": "npm run start:frontend",
-      "start:frontend": "react-scripts start",
+      "start": "react-scripts start",
       "start:backend": "node backend/server.js"
       
     },
