--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.8"
 
-    }, "scripts": {
-      "vercel-build": "npm run build && cd backend && npm install && npm run build",
+   }, "scripts": {
       "build": "react-scripts build",
       "start": "react-scripts start",
+      "build:backend": "cd backend && npm install",
       "start:backend": "node backend/server.js"
-      
     },
   
   "engines": {
