--- a/vercel.json
+++ b/vercel.json
@@ -4,39 +4,13 @@
     {
       "src": "package.json",
       "use": "@vercel/node"
-    },
-    {
-      "src": "src/**/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "src/**/*.jsx",
-      "use": "@vercel/react"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/static/(.*)",
-      "destination": "/public/static/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/public/$1"
-    },
-    {
-      "source": "/",
-      "destination": "/public/index.html"
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ],
-  "headers": [
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "s-maxage=31536000, immutable"
-        }
-      ]
-    }
-  ]
+  "ignoreFiles": ["backend/**"]
 }
