--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 
    }, "scripts": {
       "build": "react-scripts build",
-      "start": "react-scripts start"
+      "start": "react-scripts start",
+      "start-server": "cd backend && node server.js"
     },
   
   "engines": {
