--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
 
    }, "scripts": {
       "build": "react-scripts build",
-      "start": "react-scripts start",
-      "start-server": "cd backend && node server.js"
+      "start": "react-scripts start"
     },
   
   "engines": {
