--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     },
   
   "engines": {
-    "node": "14.x || 16.x || 18.x"
+    "node": "14.x || 16.x || 18.x || 20.x"
   },
   
   "browserslist": {
