--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "heroku-postbuild": "npm rebuild bcrypt --build-from-source",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "NODE_ENV=production node server.js",
@@ -25,6 +26,11 @@
     "serverless-http": "^3.2.0",
     "stripe": "^14.23.0"
   },
+
+  "engines": {
+    "node": "20.x"
+  },
+  
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
